--- a/make_plots.Rmd
+++ b/make_plots.Rmd
@@ -78,11 +78,17 @@ contrib_matrix = get_all_branch_contribs(
 
 Accumulation plot:
 
-```{r branch-decomp-accum-plot, fig.width = 5.5, fig.height = 2.5}
-contrib_accumulation_plot(contrib_matrix, phy_tree(abt_log), unlist(alpha_list))  +
+```{r branch-decomp-accum-plot-old, fig.width = 5.5, fig.height = 2.5}
+contrib_accumulation_plot_old(contrib_matrix, phy_tree(abt_log), unlist(alpha_list))  +
         geom_point(size=.5) + geom_line() +
         scale_x_log10(breaks = c(2, 5, 10, 25, 50, 100, 250, 500, 1000, 2500)) +
         xlab("Number of descendants") + ylab("Proportion of distance") + labs(color = "alpha")
+```
+
+```{r branch-decomp-accum-plot, fig.width = 5.5, fig.height = 2.5}
+contrib_accumulation_plot(contrib_matrix, phy_tree(abt_log), unlist(alpha_list))  +
+        geom_point(size=.5) + geom_line() +
+        xlab("Proportion of branches") + ylab("Proportion of distance") + labs(color = "alpha")
 ```
 
 
