add scale to distatis plots

--- a/make_plots.Rmd
+++ b/make_plots.Rmd
@@ -2,7 +2,7 @@
 ```{r}
 library(knitr)
 opts_chunk$set(cache=TRUE, cache.path = "figures-cache/",
-    fig.path = "figures/", dev="png",
+    fig.path = "figures/", dev=c("pdf", "png"),
     fig.width = 5, fig.height = 3)
 ```
 
@@ -270,22 +270,28 @@ out_distatis = distatis(distance_array)
 ```{r distatis-abt-plots, fig.height=5.5, fig.width=5.5}
 labs = sprintf("Axis %i: %4.2f%%", 1:length(distance_list),
     out_distatis$res4Cmat$eigValues / sum(out_distatis$res4Cmat$eigValues) * 100)
-plotting = data.frame(distance_types, out_distatis$res4Cmat$eigVector)
+plotting = data.frame(distance_types, sweep(scale(out_distatis$res4Cmat$eigVector, center = TRUE), MARGIN = 2, STAT = sqrt(out_distatis$res4Cmat$eigValues), FUN = "*"))
 plotting$dim.1 = -plotting$dim.1
 p2d = ggplot(plotting) +
     geom_point(aes(x = dim.1, y = dim.2, shape = family, color = param)) +
     xlab(labs[1]) +  ylab(labs[2]) + labs(color = "Parameter:\nalpha or r", shape = "Distance\ntype") +
-        scale_color_viridis() + guides(color = guide_legend(barwidth = 3)) + 
-            theme(axis.ticks = element_blank(), axis.text = element_blank())
+        scale_color_viridis() + guides(color = guide_legend(barwidth = 3))
 theta = 35
 phi = 0
-p3d = ggplot(plotting, aes(x = dim.1, y = dim.2, z = dim.3, color = param, shape = family)) + 
+p3d =
+    ggplot(plotting, aes(x = dim.1, y = dim.2, z = dim.3, color = param, shape = family)) +
     labs_3D(labs=labs[1:3],theta = theta, phi = phi,
             hjust=c(-.1,.25,-.1), vjust=c(0, -1, 0), angle=c(0, 0, 0)) +
     labs(color = "Parameter:\nalpha or r", shape = "Distance\ntype") +
+        axis_labs_3D(data = function(x) {
+            ## this is to make the scales for the axes display correctly
+            x$dim.1 = round(as.numeric(x$dim.1), digits = 2)
+            x$dim.2 = round(as.numeric(x$dim.2), digits = 2)
+            x$dim.3 = round(as.numeric(x$dim.3), digits = 2)
+            return(x)
+        }, size=2.3,theta = theta, phi = phi,hjust=c(0,1.2,0,2.1,1.27,1),vjust=c(1.5,1.8,1.5,1.5,1.5,2)) +
     axes_3D(theta = theta, phi = phi) + stat_3D(theta=theta, phi = phi) +
-        scale_color_viridis() + theme_void()
-
+    scale_color_viridis() + theme_blank()
 grid.arrange(p2d + theme(legend.position = "none"),
              g_legend(p2d),
              p3d + theme(legend.position = "none"),
